# fashion-ecommerce

./: .env-template  LICENSE  README.md  config.py  docker-compose.yml  ecommerce_db_schema.sql  trangchu.html
CSS/: main.css  style.css  sub1.css
HTML/: chinh_sach.html  cong_ty.html  dieu_khoan.html  hoi_vien.html  login.html  sign_up.html  theo_doi.html  trung_tam_ho_tro.html
ProjectWeb/: app.py  models.py  utils.py
ProjectWeb/instance/: stylex.db
ProjectWeb/routes/: auth.py  donhang.py  khac.py  khachhang.py  sanpham.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/app/: main.py  utils.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  analytics.py  attributes.py  auth.py  cart.py  categories.py  chatbot.py  cms.py  coupons.py  inventory.py  loyalty.py  notifications.py  orders.py  payment_methods.py  payments.py  products.py  return_refunds.py  reviews.py  system.py  users.py  warehouse.py  wishlist.py
backend/app/core/: __init__.py  cache.py  config.py  db.py  security.py  storage.py  task.py
backend/app/crud/: __init__.py  address.py  attribute.py  base.py  cart.py  category.py  cms.py  coupon.py  inventory.py  loyalty.py  notification.py  order.py  payment.py  payment_method.py  product.py  return_refund.py  review.py  role.py  system.py  user.py  warehouse.py  wishlist.py
backend/app/models/: __init__.py  analytic.py  attribute.py  auth.py  base.py  cart.py  category.py  chatbot.py  cms.py  common.py  coupon.py  enums.py  inventory.py  loyalty.py  notification.py  order.py  payment.py  payment_method.py  product.py  return_refund.py  review.py  system.py  user.py  warehouse.py  wishlist.py
backend/app/services/: chatbot_service.py  email.py  mongo_service.py  payos_service.py  token.py
backend/app/templates/emails/: password_changed.html  reset_password.html  verify_email.html  welcome.html
backend/app/utils/: __init__.py  pagination.py  synonyms.json
frontend/: .dockerignore  .env  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+2 more)
(+239 files in other folders)
